fix: Code Editor scrollbar glitch

--- a/frappe/public/scss/common/controls.scss
+++ b/frappe/public/scss/common/controls.scss
@@ -171,6 +171,9 @@ select.form-control {
 	.ace_print-margin {
 		background-color: var(--dark-border-color);
 	}
+	.ace_scrollbar {
+		z-index: 3;
+	}
 
 	.ace_scrollbar {
 		z-index: 4;
